# kiji

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
kiji/: __init__.py  article.py  extraction.py  inspection.py
tests/: test_article.py  test_article_saved_pages.py  test_extract_content.py  test_extract_paragraphs.py  test_inspection.py
tests/saved_pages/: bloggie-2021-06-18.html  github-2021-06-14.html  huggingface-2021-08-01.html  medium-2021-06-12.html
