[metadata]
name = kiji
version = 0.0.4
author = Wanasit Tanakitrungruang
description = A library for web article extraction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wanasit/kiji
project_urls =
    Bug Tracker = https://github.com/wanasit/kiji/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = kiji
python_requires = >=3.6
install_requires =
    beautifulsoup4
    requests
